tests/ui/parser/macro-mismatched-delim-paren-brace.rs
fn main() {
    foo! (
        bar, "baz", 1, 2.0
    } //~ ERROR mismatched closing delimiter
} //~ ERROR unexpected closing delimiter: `}`
